objects/Rx__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Anthem_Entity__c</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name_ReadOnly__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name_Read_only__c</formula>
        <label>Implementation Case Name-ReadOnly</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Rxs</relationshipLabel>
        <relationshipName>Rxs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pharmacy_Details_Applicable__c</fullName>
        <label>Is Pharmacy Details Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBU_Codes__c</fullName>
        <description>This is used only for Email template</description>
        <formula>Text(Implementation_Tracking_ID__r.Account_Legal_Name__r.MBU_Codes__c)</formula>
        <label>MBU Codes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Rx_Date__c</fullName>
        <description>Original Rx Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OwnerEmail__c</fullName>
        <formula>IF(Anthem_Entity__c != &apos;National Accounts&apos;,
IF(CONTAINS(Owner__c, &apos;RX-Local&apos;),Owner:Queue.QueueEmail,Owner:User.Email),&apos;&apos;)</formula>
        <label>OwnerEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;),Tech_Support_RX__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT( Implementation_Tracking_ID__r.Account_Legal_Name__r.Situs_State__c )</formula>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01A Assign to UW</fullName>
                </value>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Account_Legal_Name__r.Situs_State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting PBM Setup</fullName>
                </value>
                <value>
                    <fullName>Rx Non Standard Network Setup</fullName>
                </value>
                <value>
                    <fullName>Non Standard Clinical Setup</fullName>
                </value>
                <value>
                    <fullName>Internal Benefit System Issue</fullName>
                </value>
                <value>
                    <fullName>System Build Out Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_RX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_Support_RX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Rx Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took The SME Department To Approve/Deny A SME Record</inlineHelpText>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Rx Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took A SME Department To Submit A Pending Correction</inlineHelpText>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve/Deny</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_Rx_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Rx_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time SME Record Was In The SME Department And The Sales Support/Implementations Department</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rx</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_RX_Approved_and_Declined</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>All RX Approved and Declined</label>
    </listViews>
    <listViews>
        <fullName>All_Rx_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>All Rx - Key Account</label>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_RX</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>All Unassigned RX</label>
    </listViews>
    <listViews>
        <fullName>My_Rx_Implementations</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Owner_the_Logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>My Rx Implementations</label>
    </listViews>
    <listViews>
        <fullName>Rx_Local_Rx</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <label>Rx - Local</label>
    </listViews>
    <listViews>
        <fullName>Rx_National</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>Rx - National</label>
    </listViews>
    <listViews>
        <fullName>Rx_New_Group</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>Rx - New Group</label>
    </listViews>
    <listViews>
        <fullName>Rx_Off_Cycle</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>Change Request Off Cycle</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>Rx - Off Cycle</label>
    </listViews>
    <listViews>
        <fullName>Rx_Renewal</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>Rx - Renewal</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Rx_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <label>Unassigned Rx - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Rx_Local</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Stage__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <label>Unassigned Rx - Local</label>
    </listViews>
    <nameField>
        <displayFormat>RX-{000000}</displayFormat>
        <label>Rx Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>